--- a/ej1/ej01.html
+++ b/ej1/ej01.html
@@ -7,21 +7,103 @@
     <title>Parcial 1, 2025 sem 2, Desarrollo Web y Mobile</title>
     <link rel="stylesheet" href="ej01.css">
 </head>
-
 <body>
-    <h1>Ejercicio 01</h1>
-    <p>
-        Replicar la composición de ej_01_referencia.jpg lo más fiel posible,
-        respetando tipografías, tamaños, colores, espaciados y
-        alineaciones de cada sección. En /assets se encuentran las imágenes a usar
-        y en textos.md todo el contenido del menú. La entrega debe resolverse solo con
-        HTML + CSS (sin frameworks/JS).
-    </p>
-    <p>
-        La fuente a utilizar (Rufina Bold) ya ha sido descargada y agregada en
-        /assets/fonts, y se encuentra referenciada en el archivo ej01.css.
-        Solo deben aplicarla donde corresponda.
-    </p>
+    <div id="contenedor-header">
+        <div id="contenedor-titulo">
+            <h1>Los Pollos Hermanos</h1>
+            <p>El sabor que hace que hasta Heisenberg se saque el sombrero.</p>
+        </div>
+        <div id="logo">
+            <img src="ej1\assets\los_pollos_hermanos.png" alt="Logo de Los Pollos Hermanos">
+        </div>
+    <div>
+    <div id="contenedor-entrada">
+        <div class="headerSeccion">
+            <h2 class="tituloSeccion">Entradas</h2>
+            <p class="subtituloSeccion">El primer paso a la adicción</p>
+        </div>
+        <div id="contenedor-imagen">
+            <img src="ej1\assets\better_call_saul.png" alt="Imagen de Better Call Saul Comiendo Nachos">
+        </div>
+        <div id="contenedor-entradas">
+            <div class="plato">
+                <p class="precio">$20</p>
+                <p class="divisor">..................................................</p>
+                <p class="plato">Alitas de Crystal Meth</p>
+                <p class="descripcion">Crujientes y adictivas, servidas con una salsa “azul” de la casa.</p>
+            </div>
+            <div class="plato">
+                <p class="precio">$18</p>
+                <p class="divisor">..................................................</p>
+                <p class="plato">Nachos Salamanca</p>
+                <p class="descripcion">Se comen rápido, pero cuidado… siempre hay consecuencias.</p>
+            </div>
+            <div class="plato">
+                <p class="precio">$12</p>
+                <p class="divisor">..................................................</p>
+                <p class="plato">Guacamole Better Call Saul</p>
+                <p class="descripcion">Ideal para empezar la velada con una defensa impecable.</p>
+            </div>
+        </div>
+    </div>
+    <div id="contenedor-platos-principales">
+        <div class="headerSeccion">
+            <h2 class="tituloSeccion">Platos Principales</h2>
+            <p class="subtituloSeccion">La verdadera 'cocina' de Los Pollos Hermanos</p>
+        </div>
+        <div id="contenedor-platos">
+            <div class="plato">
+                <p class="precio">$20</p>
+                <p class="divisor">..................................................</p>
+                <p class="plato">Pollo a la Gus Fring</p>
+                <p class="descripcion">Perfecto, impecable, sin una sola falla.</p>
+            </div>
+            <div class="plato">
+                <p class="precio">$22</p>
+                <p class="divisor">..................................................</p>
+                <p class="plato">Ribs al estilo Heisenberg</p>
+                <p class="descripcion">Tan intensas que parecen cocinadas en un laboratorio de química.</p>
+            </div>
+            <div class="plato">
+                <p class="precio">$20</p>
+                <p class="divisor">..................................................</p>
+                <p class="plato">Steak “Say My Name”</p>
+                <p class="descripcion">Jugoso, potente y servido con respeto absoluto.</p>
+            </div>
+        </div>
+        <div>
+            <img src="ej1\assets\walter_white.png" alt="Imagen de Walter White Comiendo Ribs">
+        </div>
+    </div>
+    <div id="contenedor-postres-bebidas">
+        <div class="headerSeccion">
+            <h2 class="tituloSeccion">Postres & Bebidas</h2>
+            <p class="subtituloSeccion">Para terminar la jornada como un capo del cartel</p>
+        </div>
+        <div id="contenedor-imagen">
+            <img src="ej1\assets\gustavo_fring.png" alt="Imagen de Gustavo Fring Comiendo Flan">
+        </div>
+        <div id="contenedor-entradas">
+            <div class="plato">
+                <p class="precio">$40</p>
+                <p class="divisor">..................................................</p>
+                <p class="plato">Flan del Desierto</p>
+                <p class="descripcion">Suave, dorado y con un caramelo tan dulce que parece cocinado bajo el sol de Albuquerque.</p>
+            </div>
+            <div class="plato">
+                <p class="precio">$30</p>
+                <p class="divisor">..................................................</p>
+                <p class="plato">Café Lalo Salamanca</p>
+                <p class="descripcion">Fuerte, con un “golpe” inesperado al final.</p>
+            </div>
+            <div class="plato">
+                <p class="precio">$90</p>
+                <p class="divisor">..................................................</p>
+                <p class="plato">Whisky Pollos Hermanos</p>
+                <p class="descripcion">Tan suave que hasta Mike se tomaría uno después del turno.</p>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
